--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1 class="titulo">METAS PARA 2024</h1>
+   <h1 class="titulo">Do campo a cidade colhendo oportunidades</h1>
    <h1 class="aba-conteudo-titulo-secundario">acesse o link</h1>
    <h1 class="link"><a href="metas.html">link</a></h1>
    <div class="tabela">
