--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
    <h1 class="titulo">Do campo a cidade colhendo oportunidades</h1>
-   <h1 class="aba-conteudo-titulo-secundario">acesse o link</h1>
+   <h1 class="aba-conteudo-titulo-secundario"A 29ª edição do Programa Agrinho, desenvolvido pelo Sistema FAEP/SENAR-PR, conta com uma categoria inédita: AgroRobótica – Colégio agrícola. No total, serão 15 categorias, envolvendo alunos das mais variadas faixas etárias das redes pública e privada de ensino e das Apaes. As inscrições para as modalidades tradicionais do Concurso Agrinho (Desenho, Redação, Experiência Pedagógica e Relatório Município Agrinho) ocorrem entre 1º e 20 de agosto. Já as demais categorias possuem prazos de inscrição específicos, detalhados nos regulamentos disponíveis.
+
+   Nesta edição, o tema “Agrinho: do campo à cidade, colhendo oportunidades” destaca a importância da integração entre os diversos setores da economia, tanto no meio rural quanto no urbano, enfatizando a promoção da sustentabilidade e do empreendedorismo neste contexto. Diante disso, a colaboração entre diferentes atores e a valorização dos recursos naturais surgem como elementos fundamentais para o impulsionar o desenvolvimento econômico e social de maneira sustentável.
+   
+   Ao longo dos anos, o Agrinho tem alcançado um grande impacto social, envolvendo milhares de escolas, professores e alunos em todo o Paraná. Neste ano, o programa ressalta como a colaboração e a interação entre o campo e a cidade pode gerar oportunidades significativas, fortalecendo as relações econômicas, fomentando a preservação de recursos e impulsionando o desenvolvimento de práticas e tecnologias inovadoras.
+   
+   Ágide Meneguette, presidente do Sistema FAEP/SENAR-PR
+   A cerimônia de premiação do Concurso Agrinho está marcada para 4 de novembro, em Curitiba. Os estudantes vencedores e os respectivos professores serão convidados a participar do evento. A lista completa dos ganhadores será divulgada na primeira quinzena de outubro no site do Sistema FAEP/SENAR-PR.
+   
+   </h1>
        <ul>
            <br>
            <br>
