--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
    <h1 class="titulo">Do campo a cidade colhendo oportunidades</h1>
-   <h1 class="aba-conteudo-titulo-secundario"></h1> A 29ª edição do Programa Agrinho, desenvolvido pelo Sistema FAEP/SENAR-PR, conta com uma categoria inédita: AgroRobótica – Colégio agrícola. No total, serão 15 categorias, envolvendo alunos das mais variadas faixas etárias das redes pública e privada de ensino e das Apaes. As inscrições para as modalidades tradicionais do Concurso Agrinho (Desenho, Redação, Experiência Pedagógica e Relatório Município Agrinho) ocorrem entre 1º e 20 de agosto. Já as demais categorias possuem prazos de inscrição específicos, detalhados nos regulamentos disponíveis.
+   <h1 class="aba-conteudo-titulo-secundario"></h1> 
+   A 29ª edição do Programa Agrinho, desenvolvido pelo Sistema FAEP/SENAR-PR, conta com uma categoria inédita: AgroRobótica – Colégio agrícola. No total, serão 15 categorias, envolvendo alunos das mais variadas faixas etárias das redes pública e privada de ensino e das Apaes. As inscrições para as modalidades tradicionais do Concurso Agrinho (Desenho, Redação, Experiência Pedagógica e Relatório Município Agrinho) ocorrem entre 1º e 20 de agosto. Já as demais categorias possuem prazos de inscrição específicos, detalhados nos regulamentos disponíveis.
 
    Nesta edição, o tema “Agrinho: do campo à cidade, colhendo oportunidades” destaca a importância da integração entre os diversos setores da economia, tanto no meio rural quanto no urbano, enfatizando a promoção da sustentabilidade e do empreendedorismo neste contexto. Diante disso, a colaboração entre diferentes atores e a valorização dos recursos naturais surgem como elementos fundamentais para o impulsionar o desenvolvimento econômico e social de maneira sustentável.
    
