--- a/index.html
+++ b/index.html
@@ -22,3 +22,8 @@
        <ul>
            <br>
            <br>
+           <title>Centralizar Texto</title>
+           <style>
+               .centralizado-horizontal {
+                   text-align: center;
+               }
