--- a/index.html
+++ b/index.html
@@ -27,3 +27,13 @@
                .centralizado-horizontal {
                    text-align: center;
                }
+            </style>
+</head>
+<body>
+    <h1 class="centralizado-horizontal">Texto Centralizado Horizontalmente</h1>
+</body>
+</html>
+<h1>Minha Imagem</h1>
+    <img src="caminho/para/sua-imagem.jpg" alt="Descrição da Imagem">
+</body>
+</html>
