--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="centralizado-horizontal">Texto Centralizado Horizontalmente</h1>
+    <h1 class="centralizado-horizontal">Do campo a cidade colhendo oportunidades</h1>
    <h1 class="titulo">Do campo a cidade colhendo oportunidades</h1>
    <h1 class="aba-conteudo-titulo-secundario"></h1> 
    A 29ª edição do Programa Agrinho, desenvolvido pelo Sistema FAEP/SENAR-PR, conta com uma categoria inédita: AgroRobótica – Colégio agrícola. No total, serão 15 categorias, envolvendo alunos das mais variadas faixas etárias das redes pública e privada de ensino e das Apaes. As inscrições para as modalidades tradicionais do Concurso Agrinho (Desenho, Redação, Experiência Pedagógica e Relatório Município Agrinho) ocorrem entre 1º e 20 de agosto. Já as demais categorias possuem prazos de inscrição específicos, detalhados nos regulamentos disponíveis.
