--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do campo a cidade colhendo oportunidades</title>
+    <title>Agrinho2024</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="centralizado-horizontal">Do campo a cidade colhendo oportunidades</h1>
+    <h1 class="centralizado-horizontal">Agrinho 2024</h1>
    <h1 class="titulo">Do campo a cidade colhendo oportunidades</h1>
    <h1 class="aba-conteudo-titulo-secundario"></h1> 
    A 29ª edição do Programa Agrinho, desenvolvido pelo Sistema FAEP/SENAR-PR, conta com uma categoria inédita: AgroRobótica – Colégio agrícola. No total, serão 15 categorias, envolvendo alunos das mais variadas faixas etárias das redes pública e privada de ensino e das Apaes. As inscrições para as modalidades tradicionais do Concurso Agrinho (Desenho, Redação, Experiência Pedagógica e Relatório Município Agrinho) ocorrem entre 1º e 20 de agosto. Já as demais categorias possuem prazos de inscrição específicos, detalhados nos regulamentos disponíveis.
