--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             </style>
 </head>
 <body>
-    <h1 class="centralizado-horizontal">Texto Centralizado Horizontalmente</h1>
+    <h1 class="centralizado-horizontal"></h1>
 </body>
 </html>
-<h1>Minha Imagem</h1>
+<h1></h1>
     <img src=https://www.jornalnovotempo.com.br/~jornalno/images/2023/08/01/agrinho_large.jpg
 </html>
